<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="145dp"
        android:layout_height="138dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/create_account"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="372dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="@font/open_sans_light_italic"
        android:hint="@string/email"
        android:inputType="text"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email2" />

    <EditText
        android:id="@+id/et_email2"
        android:layout_width="372dp"
        android:layout_height="56dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:fontFamily="@font/open_sans_light_italic"
        android:hint="@string/name"
        android:inputType="text"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:fontFamily="@font/open_sans_light_italic"
        android:hint="@string/password"
        android:inputType="text"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

  <Button
    android:id="@+id/button"
    android:layout_width="133dp"
    android:layout_height="47dp"
    android:layout_marginTop="76dp"
    android:backgroundTint="@color/pink"
    android:fontFamily="@font/open_sans"
    android:text="@string/sign_up"
    android:textColor="@color/green"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.478"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/et_password" />

  <TextView
        android:id="@+id/tv_derechos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/derechos_reser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="33dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/ic_volver" />
</androidx.constraintlayout.widget.ConstraintLayout>
